--- a/docs/source/repository_structure.mdx
+++ b/docs/source/repository_structure.mdx
@@ -5,8 +5,11 @@ To host and share your dataset, you can create a dataset repository on the Huggi
 This guide will show you how to structure your dataset repository when you upload it.
 A dataset with a supported structure can be loaded automatically with `load_dataset`, and it will have a preview on its dataset page on the Hub.
 
-Note,None
+<Tip>
+
 The following examples use CSV files, but you can use any supported format (text, JSON, JSON Lines, CSV, Parquet).
+
+</Tip>
 
 ## Main use-case
 
