--- a/docs/source/share.mdx
+++ b/docs/source/share.mdx
@@ -32,8 +32,11 @@ For community datasets, if your dataset is in a supported format, you can skip d
 
 On the other hand, a dataset script is always required for canonical datasets.
 
-important,None
+<Tip warning={true}>
+
 The distinction between a canonical and community dataset is based solely on the selected sharing workflow. It does not involve any ranking, decisioning, or opinion regarding the contents of the dataset itself.
+
+</Tip>
 
 <a id='upload_dataset_repo'></a>
 
