--- a/docs/source/access.mdx
+++ b/docs/source/access.mdx
@@ -11,7 +11,7 @@ A [`datasets.Dataset`] object is returned when you load an instance of a dataset
 
 ## Metadata
 
-The [`datasets.Dataset`] object contains a lot of useful information about your dataset. For example, call :attr:*dataset.info* to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
+The [`datasets.Dataset`] object contains a lot of useful information about your dataset. For example, call ['dataset.info'] to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
 
 ```py
 >>> dataset.info
@@ -73,7 +73,7 @@ List the columns names with [`datasets.Dataset.column_names`]:
 ['idx', 'label', 'sentence1', 'sentence2']
 ```
 
-Get detailed information about the columns with :attr:*datasets.Dataset.features*:
+Get detailed information about the columns with ['datasets.Dataset.features']:
 
 ```py
 >>> dataset.features
