--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -377,7 +377,7 @@ See the [metric_script](#metric_script) guide for more details on how to write y
 
 ### Load configurations
 
-It is possible for a metric to have different configurations. The configurations are stored in the :attr:*datasets.Metric.config_name* attribute. When you load a metric, provide the configuration name as shown in the following:
+It is possible for a metric to have different configurations. The configurations are stored in the ['datasets.Metric.config_name'] attribute. When you load a metric, provide the configuration name as shown in the following:
 
 ```
 >>> from datasets import load_metric
