--- a/docs/source/stream.mdx
+++ b/docs/source/stream.mdx
@@ -5,7 +5,7 @@ Dataset streaming lets you get started with a dataset without waiting for the en
 - You don't want to wait for an extremely large dataset to download.
 - The dataset size exceeds the amount of disk space on your computer.
 
-<img align="center" src="/docs/datasets/master/en/imgs/stream.gif"/>
+<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/stream.gif"/>
 
 For example, the English split of the [OSCAR](https://huggingface.co/datasets/oscar) dataset is 1.2 terabytes, but you can use it instantly with streaming. Stream a dataset by setting `streaming=True` in [`datasets.load_dataset`] as shown below:
 
