--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -1,6 +1,6 @@
 # Datasets
 
-<img align="center" src="/docs/datasets/master/en/imgs/datasets_logo.png"/>
+<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/datasets_logo.png"/>
 
 🤗 Datasets is a library for easily accessing and sharing datasets, and evaluation metrics for Natural Language Processing (NLP), computer vision, and audio tasks.
 
@@ -8,21 +8,21 @@ Load a dataset in a single line of code, and use our powerful data processing me
 
 Find your dataset today on the [Hugging Face Hub](https://huggingface.co/datasets), or take an in-depth look inside a dataset with the live [Datasets Viewer](https://huggingface.co/datasets/viewer/).
 
-<div class="w-full grid grid-cols-2 gap-y-2 gap-x-5 px-5">
-  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/tutorial">
-    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">Tutorials</p>
+<div class="w-full flex flex-col md:grid md:grid-cols-2 md:gap-y-4 md:gap-x-5 px-5">
+  <a class="!no-underline border dark:border-gray-700 p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/tutorial">
+    <div class="w-full text-center bg-blue-500 rounded text-white text-lg">Tutorials</div>
     <p>Learn the basics and become familiar with loading, accessing, and processing a dataset. Start here if you are using 🤗 Datasets for the first time!</p>
   </a>
-  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/how_to">
-    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">How-to guides</p>
+  <a class="!no-underline border dark:border-gray-700 p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/how_to">
+    <div class="w-full text-center bg-blue-500 rounded text-white text-lg">How-to guides</div>
     <p>Practical guides to help you achieve a specific goal. Take a look at these guides to learn how to use 🤗 Datasets to solve real-world problems.</p>
   </a>
-  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/about_arrow">
-    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">Conceptual guides</p>
+  <a class="!no-underline border dark:border-gray-700 p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/about_arrow">
+    <div class="w-full text-center bg-blue-500 rounded text-white text-lg">Conceptual guides</div>
     <p>High-level explanations for building a better understanding about important topics such as the underlying data format, the cache, and how datasets are generated.</p>
   </a>
-  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/package_reference/main_classes">
-    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">Reference</p>
+  <a class="!no-underline border dark:border-gray-700 p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/package_reference/main_classes">
+    <div class="w-full text-center bg-blue-500 rounded text-white text-lg">Reference</div>
     <p>Technical descriptions of how 🤗 Datasets classes and methods work.</p>
   </a>
 </div>
