--- a/docs/source/upload_dataset.mdx
+++ b/docs/source/upload_dataset.mdx
@@ -11,21 +11,21 @@ A repository hosts all your dataset files, including the revision history, makin
 1. Click on your profile and select **New Dataset** to create a new dataset repository. 
 2. Give your dataset a name, and select whether this is a public or private dataset. A public dataset is visible to anyone, whereas a private dataset can only be viewed by you or members of your organization.
 
-<img align="center" src="/docs/datasets/master/en/imgs/create_repo.png"/>
+<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/create_repo.png"/>
 
 ## Upload your files
 
 1. Once you have created a repository, navigate to the **Files and versions** tab to add a file. Select **Add file** to upload your dataset files. We currently support the following data formats: CSV, JSON, JSON lines, text, and Parquet.
 
-<img align="center" src="/docs/datasets/master/en/imgs/upload_files.png"/>
+<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/upload_files.png"/>
 
 2. Drag and drop your dataset files here, and add a brief descriptive commit message.
 
-<img align="center" src="/docs/datasets/master/en/imgs/commit_files.png"/>
+<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/commit_files.png"/>
 
 3. Once you have uploaded your dataset files, they are now stored in your dataset repository.
 
-<img align="center" src="/docs/datasets/master/en/imgs/files_stored.png"/>
+<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/files_stored.png"/>
 
 ## Create a Dataset card
 
@@ -33,7 +33,7 @@ The last step is to create a Dataset card. The Dataset card is essential for hel
 
 1. Click on the **Create Dataset Card** to create a Dataset card.
 
-<img align="center" src="/docs/datasets/master/en/imgs/dataset_card.png"/>
+<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/dataset_card.png"/>
 
 2. Get a quick start with our Dataset card [template](https://raw.githubusercontent.com/huggingface/datasets/master/templates/README.md) to help you fill out all the relevant fields. 
 
@@ -41,7 +41,7 @@ The last step is to create a Dataset card. The Dataset card is essential for hel
 
 4. Copy the generated tags and paste them at the top of your Dataset card, then commit your changes.
 
-<img align="center " src="/docs/datasets/master/en/imgs/card_tags.png"/>
+<img align="center " src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/card_tags.png"/>
 
 For a detailed example of what a good Dataset card should look like, refer to the [CNN DailyMail Dataset card](https://huggingface.co/datasets/cnn_dailymail).
 
