--- a/docs/source/audio_process.mdx
+++ b/docs/source/audio_process.mdx
@@ -81,7 +81,9 @@ The next time you load the audio file, the [`datasets.Audio`] feature will load 
 'sampling_rate': 16000}
 ```
 
-<img align="center" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/resample.gif"/>
+<div class="flex justify-center">
+    <img src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/resample.gif"/>
+</div>
 
 ## `Map`
 
