--- a/docs/source/access.mdx
+++ b/docs/source/access.mdx
@@ -73,7 +73,7 @@ List the columns names with [`datasets.Dataset.column_names`]:
 ['idx', 'label', 'sentence1', 'sentence2']
 ```
 
-Get detailed information about the columns with ['datasets.Dataset.features']:
+Get detailed information about the columns with [`datasets.Dataset.features`]:
 
 ```py
 >>> dataset.features
