--- a/docs/source/access.mdx
+++ b/docs/source/access.mdx
@@ -1,6 +1,6 @@
 # The `Dataset` object
 
-In the previous tutorial, you learned how to successfully load a dataset. This section will familiarize you with the [`datasets.Dataset`] object. You will learn about the metadata stored inside a Dataset object, and the basics of querying a Dataset object to return rows and columns.
+In the previous tutorial, you learned how to successfully load a dataset. This section will familiarize you with the [`Dataset`] object. You will learn about the metadata stored inside a Dataset object, and the basics of querying a Dataset object to return rows and columns.
 
 A [`datasets.Dataset`] object is returned when you load an instance of a dataset. This object behaves like a normal Python container.
 
