Rm `code` syntax from headings

--- a/docs/source/audio_process.mdx
+++ b/docs/source/audio_process.mdx
@@ -85,7 +85,7 @@ The next time you load the audio file, the [`datasets.Audio`] feature will load 
     <img src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/resample.gif"/>
 </div>
 
-## `Map`
+## Map
 
 Just like text datasets, you can apply a preprocessing function over an entire dataset with [`datasets.Dataset.map`], which is useful for preprocessing all of your audio data at once. Start with a [speech recognition model](https://huggingface.co/models?pipeline_tag=automatic-speech-recognition&sort=downloads) of your choice, and load a `processor` object that contains:
 
