Hashlink backward compatability

--- a/docs/source/about_dataset_load.mdx
+++ b/docs/source/about_dataset_load.mdx
@@ -29,7 +29,7 @@ When you load a dataset for the first time, 🤗 Datasets takes the raw data fil
    <img src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/builderconfig.png"/>
 </div>
 
-### datasets.BuilderConfig
+### datasets.BuilderConfig[[datasets-builderconfig]]
 
 [`datasets.BuilderConfig`] is the configuration class of [`datasets.DatasetBuilder`]. The [`datasets.BuilderConfig`] contains the following basic attributes about a dataset:
 
@@ -49,7 +49,7 @@ If you want to add additional attributes to your dataset such as the class label
 
 You can also set the [`datasets.DatasetBuilder.BUILDER_CONFIG_CLASS`] to any custom subclass of [`datasets.BuilderConfig`].
 
-### datasets.DatasetBuilder
+### datasets.DatasetBuilder[[datasets-datasetbuilder]]
 
 [`datasets.DatasetBuilder`] accesses all the attributes inside [`datasets.BuilderConfig`] to build the actual dataset.
 
