--- a/docs/source/package_reference/main_classes.mdx
+++ b/docs/source/package_reference/main_classes.mdx
@@ -225,7 +225,7 @@ The base class `Metric` implements a Metric backed by one or several [`datasets.
 ## Filesystems
 
 
-[[autodoc]] datasets.filesystems.S3FileSystem(anon=False, key=None, secret=None, token=None, use_ssl=True, client_kwargs=None, requester_pays=False, default_block_size=None, default_fill_cache=True, default_cache_type='bytes', version_aware=False, config_kwargs=None, s3_additional_kwargs=None, session=None, username=None, password=None, asynchronous=False, loop=None, **kwargs)
+[[autodoc]] datasets.filesystems.S3FileSystem
 
 [[autodoc]] datasets.filesystems.extract_path_from_uri
 
