--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -11,7 +11,7 @@ Load a dataset in a single line of code, and use our powerful data processing me
 Find your dataset today on the [Hugging Face Hub](https://huggingface.co/datasets), or take an in-depth look inside a dataset with the live [Datasets Viewer](https://huggingface.co/datasets/viewer/).
 
 <div>
-  <div class="w-full flex flex-col md:grid md:grid-cols-2 md:gap-y-4 md:gap-x-5">
+  <div class="w-full flex flex-col space-y-4 md:space-y-0 md:grid md:grid-cols-2 md:gap-y-4 md:gap-x-5">
     <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/tutorial"
       ><div class="w-full text-center bg-gradient-to-br from-blue-400 to-blue-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Tutorials</div>
       <p class="text-gray-700">Learn the basics and become familiar with loading, accessing, and processing a dataset. Start here if you are using 🤗 Datasets for the first time!</p>
