Add darkmode gifs

--- a/docs/source/audio_process.mdx
+++ b/docs/source/audio_process.mdx
@@ -82,7 +82,8 @@ The next time you load the audio file, the [`datasets.Audio`] feature will load 
 ```
 
 <div class="flex justify-center">
-    <img src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/resample.gif"/>
+    <img class="block dark:hidden" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/resample.gif"/>
+    <img class="hidden dark:block" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/resample-dark.gif"/>
 </div>
 
 ## Map
