Index logo img css classes

--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -1,7 +1,7 @@
 # Datasets
 
 <div class="flex justify-center">
-  <img src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/datasets_logo.png"/>
+  <img class="!border-0 !shadow-none" src="https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/datasets/datasets_logo.png"/>
 </div>
 
 🤗 Datasets is a library for easily accessing and sharing datasets, and evaluation metrics for Natural Language Processing (NLP), computer vision, and audio tasks.
