Docs for DownloadMode class

--- a/docs/source/cache.mdx
+++ b/docs/source/cache.mdx
@@ -40,7 +40,7 @@ After you download a dataset, control how it is loaded by [`datasets.load_datase
 >>> dataset = load_dataset('squad', download_mode='force_redownload')
 ```
 
-Refer to [`datasets.GenerateMode`] for a full list of download modes.
+Refer to [`datasets.DownloadMode`] for a full list of download modes.
 
 ## Cache files
 
