--- a/docs/source/package_reference/builder_classes.mdx
+++ b/docs/source/package_reference/builder_classes.mdx
@@ -14,7 +14,7 @@
 
 [[autodoc]] datasets.DownloadManager
 
-[[autodoc]] datasets.GenerateMode
+[[autodoc]] datasets.DownloadMode
 
 [[autodoc]] datasets.SplitGenerator
 
